# parkinson_app

./: CMakeLists.txt  README.md
include/: filedownloader.h  mainwindow.h
src/: filedownloader.cpp  mainwindow.cpp  mainwindow.ui
